made the spade - cleanup code - update to paper 1.21.11 api